# zendao

./: .gitignore  404.html  IDEAS.md  README.md  TODO.md  TransportWebHID.50b5f752.js  TransportWebHID.50b5f752.js.map  blocto-sdk.umd.1bb65cb8.js  blocto-sdk.umd.1bb65cb8.js.map  esm.1515a450.js  esm.1515a450.js.map  esm.71af47ac.js  esm.71af47ac.js.map  index.6b4ce937.js  index.cc7c1ad2.js  index.html  solanaEmbed.esm.f08bcc69.js  solanaEmbed.esm.f08bcc69.js.map  telegram.md
.github/workflows/: front-publish.yml
cursos/controle-de-versao/: README.md
cursos/paradigmas/: README.md
cursos/rust/: .gitignore  README.md
cursos/rust/from-book/step-001/: main
cursos/rust/misc/base64_encoder_decoder/: Cargo.toml
cursos/rust/misc/eth-signature-verify/: Cargo.toml
cursos/rust/misc/shared_references/: Cargo.toml
cursos/rust/misc/u8overflow/: Cargo.toml
cursos/rust/parse_json/: Cargo.toml
cursos/rust/parse_json/src/: main.rs
cursos/rust/quiz/quiz-001/: Cargo.toml
cursos/solana/: README.md
cursos/solidity/: README.md
dao/front-app/: .gitignore  README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
dao/front-app/scripts/: deploy-github-pages.sh
dao/front-app/src/: App.tsx  Theme.tsx  index.html  index.tsx
dao/front-app/src/components/: Amount.tsx  TelegramUserValidation.tsx
dao/front-app/src/contexts/: WalletContext.tsx
dao/front-app/src/models/: solzen.json  solzen.ts
dao/front-app/src/pages/: InitDAO.tsx  Landing.tsx  Telegram.tsx  Validation.tsx
dao/solzen/: .gitignore  Anchor.toml  Cargo.toml  README.md  package.json
dao/solzen/ctsi_sol/: Cargo.toml
dao/solzen/programs/solzen/: Cargo.toml  README.md  macro_expanded.rs
dao/solzen/programs/solzen/src/: lib.rs  models.rs
dao/solzen/programs/solzen/tests/: factory.rs  functional.rs  integration_test.rs
dao/solzen/scripts/: deploy.js  sync_models.sh
dao/solzen/tests/: Factory.ts  solzen.ts  telegram.ts
(+55 files in other folders)
