[package]
name = "solzen"
version = "0.1.0"
description = "Created with Anchor"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "solzen"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.25.0"
anchor-spl = "0.25.0"
sha2 = "0.10.5"
spl-associated-token-account = "1.0.5"
ctsi_sol = { path = "../ctsi_sol" }